--- a/packages/broker-api/pyproject.toml
+++ b/packages/broker-api/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "brocker-api"
+name = "broker-api"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
