--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ dependencies = []
 [tool.uv.sources]
 measure-repository = { workspace = true }
 measure-open-meteo = { workspace = true }
-brocker-api = { workspace = true }
-brocker-kafka = { workspace = true }
+broker-api = { workspace = true }
+broker-kafka = { workspace = true }
 
 [tool.uv.workspace]
 members = ["packages/*"]
