--- a/packages/broker-kafka/pyproject.toml
+++ b/packages/broker-kafka/pyproject.toml
@@ -8,7 +8,13 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.11.16",
+    "aiohttp-cors>=0.8.1",
+    "aiokafka>=0.12.0",
+    "aiosignal>=1.3.2",
+    "async-timeout>=5.0.1",
     "confluent-kafka>=2.9.0",
+    "kafka-python-ng>=2.2.3",
 ]
 
 [build-system]
