--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,12 @@ requires-python = ">=3.12"
 dependencies = []
 
 [tool.uv.sources]
-measure-repository = { workspace = true }
-measure-open-meteo = { workspace = true }
-measure-influxdb = { workspace = true }
-broker-api = { workspace = true }
-broker-kafka = { workspace = true }
+measure-feature = { workspace = true }
+measure-open-meteo-adapter = { workspace = true }
+influxdb-connector = { workspace = true }
+kafka-connector = { workspace = true }
+s3-connector = { workspace = true }
+cds-connector = { workspace = true }
 
 [tool.uv.workspace]
 members = ["packages/*"]
