--- a/scripts/docker-compose.yaml
+++ b/scripts/docker-compose.yaml
@@ -39,5 +39,19 @@ services:
     volumes:
       - influxdb-data:/var/lib/influxdb
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: adminpassword
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
+
 volumes:
   influxdb-data:
+  minio-data:
