--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ influxdb-connector = { workspace = true }
 kafka-connector = { workspace = true }
 s3-connector = { workspace = true }
 cds-connector = { workspace = true }
+grib-connector = { workspace = true }
 
 [tool.uv.workspace]
 members = ["packages/*"]
