--- a/packages/file-connector/pyproject.toml
+++ b/packages/file-connector/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "grib-connector"
+name = "file-connector"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
