--- a/packages/file-repository-posix/pyproject.toml
+++ b/packages/file-repository-posix/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "s3-connector"
+name = "file-repository-posix"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,9 +7,7 @@ authors = [
     { name = "flegac", email = "florent.legac@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = [
-    "aioboto3>=14.1.0",
-]
+dependencies = []
 
 [build-system]
 requires = ["hatchling"]
