--- a/packages/file-repository-s3/pyproject.toml
+++ b/packages/file-repository-s3/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "measure-feature"
+name = "file-repository-s3"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,7 +7,10 @@ authors = [
     { name = "flegac", email = "florent.legac@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "aioboto3>=14.1.0",
+    "aiohappyeyeballs>=2.6.1",
+]
 
 [build-system]
 requires = ["hatchling"]
