feat: measure-io (file, influxdb, kafka, open-meteo)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,22 @@ requires-python = ">=3.12"
 dependencies = []
 
 [tool.uv.sources]
-measure-feature = { workspace = true }
-measure-open-meteo-adapter = { workspace = true }
-influxdb-connector = { workspace = true }
+
+measure-io = { workspace = true }
+measure-io-file = { workspace = true }
+measure-io-open-meteo = { workspace = true }
+measure-io-influxdb = { workspace = true }
+measure-io-kafka = { workspace = true }
+
+data-file-ingestion = { workspace = true }
+data-file-repository-pg = { workspace = true }
+
+file-repository = { workspace = true }
+file-repository-posix = { workspace = true }
+file-repository-s3 = { workspace = true }
+
 kafka-connector = { workspace = true }
-s3-connector = { workspace = true }
-cds-connector = { workspace = true }
-file-connector = { workspace = true }
+
 
 [tool.uv.workspace]
 members = ["packages/*"]
