--- a/packages/data-file-ingestion/pyproject.toml
+++ b/packages/data-file-ingestion/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "influxdb-connector"
+name = "data-file-ingestion"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,9 +7,7 @@ authors = [
     { name = "flegac", email = "florent.legac@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = [
-    "influxdb-client>=1.48.0",
-]
+dependencies = []
 
 [build-system]
 requires = ["hatchling"]
