--- a/packages/aa-common/pyproject.toml
+++ b/packages/aa-common/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "kafka-connector"
+name = "aa-common"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -8,13 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "aiohttp>=3.11.16",
-    "aiohttp-cors>=0.8.1",
-    "aiokafka>=0.12.0",
-    "aiosignal>=1.3.2",
-    "async-timeout>=5.0.1",
-    "confluent-kafka>=2.9.0",
-    "kafka-python-ng>=2.2.3",
+    "loguru>=0.7.3",
 ]
 
 [build-system]
