feat: rework api (Repository / Reader / Writer)

--- a/packages/measure-repository-datafile/pyproject.toml
+++ b/packages/measure-repository-datafile/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "data-file-repository"
+name = "measure-repository-datafile"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,10 +7,7 @@ authors = [
     { name = "flegac", email = "florent.legac@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = [
-    "h5netcdf>=1.6.1",
-    "xarray>=2025.3.1",
-]
+dependencies = []
 
 [build-system]
 requires = ["hatchling"]
