--- a/scripts/docker-compose.yaml
+++ b/scripts/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
     container_name: kafka
     ports:
       - "9092:9092"
+      - "9999:9999"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -22,6 +23,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_JMX_OPTS: "-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.rmi.port=9999"
     depends_on:
       - zookeeper
 
@@ -64,7 +66,45 @@ services:
     volumes:
       - postgres-data:/data/measures/postgresql
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yaml'
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: adminpassword
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - prometheus
+
+  conduktor:
+    image: conduktor/conduktor-platform:latest
+    container_name: conduktor
+    ports:
+      - "8080:8080"
+      - "9095:9095"
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: kafka:9092
+      CONDUKTOR_BACKEND_PORT: 9095
+      CDK_DATABASE_URL: "postgresql://admin:adminpassword@postgres:5432/mydatabase"
+    depends_on:
+      - kafka
+      - postgres
+
 volumes:
   influxdb-data:
   minio-data:
   postgres-data:
+  grafana-data:
