feat: working on ingestion, meteo-app, grib file generation

--- a/projects/meteo-app/src/meteo_app/wires/config.ini
+++ b/projects/meteo-app/src/meteo_app/wires/config.ini
@@ -16,5 +16,5 @@ group_id = meteo_group
 [influxdb]
 url = http://localhost:8086
 org = myorg
-token = SDha-behzzOhZyZ1v1xfnjKtDhWbk_uZDuLyUJvHXYQSGSJkwXBVFj9F8dhnPMZoXLkRRuih_E5gJfJ3d3sdBw==
+token = server-token
 bucket = meteo-data
