--- a/scripts/docker-compose.yaml
+++ b/scripts/docker-compose.yaml
@@ -38,6 +38,7 @@ services:
       DOCKER_INFLUXDB_INIT_PASSWORD: adminpassword
       DOCKER_INFLUXDB_INIT_ORG: myorg
       DOCKER_INFLUXDB_INIT_BUCKET: meteo-data
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: server-token
     volumes:
       - influxdb-data:/var/lib/influxdb
 
