--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,23 +9,30 @@ repos:
         pass_filenames: false
         always_run: true
 
-      - id: isort
-        name: isort
-        entry: isort
+      - id: ruff-check
+        name: ruff check
+        entry: ruff check
         language: system
         types: [ python ]
 
-      - id: black
-        name: black
-        entry: black
+      - id: ruff-fix
+        name: ruff fix
+        entry: ruff check
+        language: system
+        types: [ python ]
+        args: [ --fix, --exit-non-zero-on-fix ]
+
+      - id: ruff-format
+        name: ruff format
+        entry: ruff format
         language: system
         types: [ python ]
 
-      - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types: [ python ]
+#      - id: pylint
+#        name: pylint
+#        entry: uv run pylint
+#        language: system
+#        types: [ python ]
 
       #      - id: coverage
       #        name: Coverage
