feat: better adapters (externalize connectors)

--- a/projects/meteo-app/src/meteo_app/wires/config.ini
+++ b/projects/meteo-app/src/meteo_app/wires/config.ini
@@ -1,5 +1,5 @@
 [database]
-url = postgresql+asyncpg://admin:adminpassword@localhost:5432/mydatabase
+url = postgresql+asyncpg://admin:adminpassword@localhost:5432/meteo-db
 
 [s3]
 endpoint = http://localhost:9000
@@ -11,7 +11,6 @@ path = /tmp/test/local
 
 [kafka]
 broker_url = localhost:9092
-group_id = meteo_group
 
 [influxdb]
 url = http://localhost:8086
