--- a/adapters/data-file-repository-pg/pyproject.toml
+++ b/adapters/data-file-repository-pg/pyproject.toml
@@ -8,10 +8,10 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "asyncpg>=0.30.0",
-    "databases>=0.9.0",
-    "sqlalchemy>=2.0.40",
+    "meteo-domain",
+    "pg-connector"
 ]
+
 
 [build-system]
 requires = ["hatchling"]
