--- a/adapters/file-repository-posix/pyproject.toml
+++ b/adapters/file-repository-posix/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "flegac", email = "florent.legac@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "meteo-domain",
+]
 
 [build-system]
 requires = ["hatchling"]
