--- a/adapters/file-repository-s3/pyproject.toml
+++ b/adapters/file-repository-s3/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "aioboto3>=14.1.0",
-    "aiohappyeyeballs>=2.6.1",
+    "meteo-domain",
+    "s3-connector"
 ]
 
 [build-system]
