--- a/adapters/measure-repository-influxdb/pyproject.toml
+++ b/adapters/measure-repository-influxdb/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "influxdb-client>=1.48.0",
+    "meteo-domain",
+    "influxdb-connector",
 ]
 
 [build-system]
