--- a/adapters/measure-repository-openmeteo/pyproject.toml
+++ b/adapters/measure-repository-openmeteo/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "meteo-domain",
     "numpy>=2.2.4",
     "openmeteo-requests>=1.4.0",
     "pandas>=2.2.3",
