feat: redis-message-queue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "celery>=5.5.2",
+]
 
 [tool.uv.workspace]
 members = [
@@ -73,7 +75,6 @@ dev = [
     "isort>=6.0.1",
     "pdoc>=15.0.3",
     "pre-commit>=4.2.0",
-    "prospector>=1.16.1",
     "pydeps>=3.0.1",
     "pylint>=3.3.6",
     "radon>=6.0.1",
