--- a/projects/meteo-backend/pyproject.toml
+++ b/projects/meteo-backend/pyproject.toml
@@ -4,6 +4,7 @@ version = "1.0.0"
 description = "Backend API for meteorological data management"
 requires-python = ">=3.9"
 dependencies = [
+    "aa-common",
     "fastapi>=0.100.0",
     "uvicorn[standard]",
     "python-multipart",
