--- a/scripts/docker-compose.yaml
+++ b/scripts/docker-compose.yaml
@@ -67,6 +67,15 @@ services:
     volumes:
       - postgres-data:/data/measures/postgresql
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: redis-server --appendonly yes
+
 #  prometheus:
 #    image: prom/prometheus:latest
 #    container_name: prometheus
@@ -109,3 +118,4 @@ volumes:
   minio-data:
   postgres-data:
   grafana-data:
+  redis-data:
