--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,8 +79,11 @@ dev = [
     "isort>=6.0.1",
     "pdoc>=15.0.3",
     "pre-commit>=4.2.0",
+    "pycrunch-engine>=1.6.4",
     "pydeps>=3.0.1",
     "pylint>=3.3.6",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
     "radon>=6.0.1",
     "ruff>=0.11.8",
 ]
