--- a/projects/meteo-app/src/meteo_app/wires/config.ini
+++ b/projects/meteo-app/src/meteo_app/wires/config.ini
@@ -14,6 +14,6 @@ broker_url = localhost:9092
 
 [influxdb]
 url = http://localhost:8086
-org = myorg
+org = meteo-org
 token = server-token
 bucket = meteo-data
