--- a/scripts/docker-starter/docker-compose.databases.yaml
+++ b/scripts/docker-starter/docker-compose.databases.yaml
@@ -25,7 +25,7 @@ services:
       DOCKER_INFLUXDB_INIT_MODE: setup
       DOCKER_INFLUXDB_INIT_USERNAME: admin
       DOCKER_INFLUXDB_INIT_PASSWORD: adminpassword
-      DOCKER_INFLUXDB_INIT_ORG: myorg
+      DOCKER_INFLUXDB_INIT_ORG: meteo-org
       DOCKER_INFLUXDB_INIT_BUCKET: meteo-data
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: server-token
     volumes:
