--- a/projects/meteo-domain/pyproject.toml
+++ b/projects/meteo-domain/pyproject.toml
@@ -8,7 +8,10 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "aa-common",
+    "dependency-injector>=4.46.0",
+    "loguru>=0.7.3",
+    "psutil>=7.0.0",
+    "tqdm>=4.67.1",
     "cfgrib>=0.9.15.0",
     "h5netcdf>=1.6.1",
     "xarray>=2025.3.1",
