--- a/scripts/docker-starter/docker-compose.databases.yaml
+++ b/scripts/docker-starter/docker-compose.databases.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
 
   postgres:
@@ -11,11 +9,10 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: adminpassword
       POSTGRES_DB: meteo-db
+      CMD: CREATE EXTENSION postgis;
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
-  
-  
   influxdb:
     image: influxdb:latest
     container_name: influxdb
