--- a/adapters/geopy-location-api/pyproject.toml
+++ b/adapters/geopy-location-api/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "posix-measure-repository"
+name = "geopy-location-api"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -8,12 +8,9 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "meteo-domain",
+    "geopy>=2.4.1",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.pytest.ini_options]
-asyncio_default_fixture_loop_scope = "function"
