--- a/adapters/sql-meteo-adapters/pyproject.toml
+++ b/adapters/sql-meteo-adapters/pyproject.toml
@@ -15,3 +15,6 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
