--- a/connectors/sql-connector/pyproject.toml
+++ b/connectors/sql-connector/pyproject.toml
@@ -8,10 +8,8 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "databases>=0.9.0",
     "sqlalchemy>=2.0.40",
     "asyncpg>=0.30.0",
-    "sqlmodel>=0.0.24",
     "shapely>=2.1.0",
     "geoalchemy2>=0.17.1",
 ]
@@ -19,3 +17,6 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
