--- a/projects/event-mock/pyproject.toml
+++ b/projects/event-mock/pyproject.toml
@@ -12,3 +12,6 @@ dependencies = []
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
