--- a/projects/meteo-app/pyproject.toml
+++ b/projects/meteo-app/pyproject.toml
@@ -22,3 +22,6 @@ ingestion-listener = "meteo_app.datafile_ingestion_listener:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
