--- a/projects/meteo-backend/pyproject.toml
+++ b/projects/meteo-backend/pyproject.toml
@@ -24,6 +24,9 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+
 [dependency-groups]
 dev = [
     "httpx>=0.28.1",
