--- a/projects/meteo-domain/pyproject.toml
+++ b/projects/meteo-domain/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.13"
 dependencies = [
     "dependency-injector>=4.46.0",
     "loguru>=0.7.3",
+    "opencv-python>=4.11.0.86",
     "psutil>=7.0.0",
+    "scipy>=1.15.3",
     "tqdm>=4.67.1",
 ]
 
