--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "easy-kit>=0.1.24",
 ]
 
 [tool.uv.workspace]
@@ -75,7 +76,6 @@ dev = [
     "isort>=6.0.1",
     "pdoc>=15.0.3",
     "pre-commit>=4.2.0",
-    "pycrunch-engine>=1.6.4",
     "pydeps>=3.0.1",
     "pylint>=3.3.6",
     "pytest>=8.3.5",
